# rll_path_planning_project

./: .gitignore  .gitlab-ci.yml  .rll_submit_ignore  CMakeLists.txt  README.md  package.xml  planning_project.rosinstall  setup.py
.ci/: linting.sh
action/: PlanToGoal.action
config/: planning_env.srdf.xacro
include/: planning_iface.h  planning_iface_simulation.h
include/rll_planning_project/: planning_iface.h  planning_iface_simulation.h
launch/: moveit.rviz  moveit_planning_execution.launch  path_planner.launch  planning_iface.launch  run_your_planner.launch  setup_simulation.launch  submit_project.launch
meshes/collision/: Maze.stl
meshes/orig/: Maze.CATPart  MazePadding.CATPart
meshes/visual/: Maze.dae
scripts/: path_planner.py  start_project.sh
src/: planning_iface.cpp  planning_iface_node.cpp
src/rll_planning_project_iface/: client.py
srv/: CheckPath.srv  GetStartGoal.srv  Move.srv
tests/: Readme.md
tests/launch/: demo_tests_python.test  tests_python.test
tests/scripts/: demo_tests_main.py  sample_solution_test.py  tests_main.py
urdf/: grasp_object.urdf.xacro  planning_env.urdf.xacro
