<?xml version="1.0"?>
<package format="2">
  <name>rll_planning_project</name>
  <version>0.0.1</version>
  <description>Path planning project for the KUKA Robot Learning Lab at KIT</description>

  <maintainer email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</maintainer>

  <license>GPLv3+</license>

  <author email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</author>

  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>rll_msgs</depend>
  <depend>rll_move</depend>
  <depend>rll_move_client</depend>
  <build_depend>rostest</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
